Stupid hack to fix crash when deleting sensors

I can't think of a better way to fix it, because of this stupid communication protocol code.
I hope I can switch to dbus for communication and kill of all these types of bugs once and for all

BUG:179305

svn path=/trunk/KDE/kdebase/workspace/; revision=975473